@@ -176,6 +176,7 @@ config["variant-script"] = config["pipeline-folder"]+"/scripts/VariantCalling-re
 config["mockeval-script"] = config["pipeline-folder"]+"/scripts/mockeval-report.Rmd"
 config["refinement-script"] = config["pipeline-folder"]+"/scripts/refineMockReference.R"
 config["insilico-script"] = config["pipeline-folder"]+"/scripts/inSilicoFasta.R"
+config["similarity-script"] = config["pipeline-folder"]+"/scripts/mockRef_similarity.R"
 config["insilico-report-script"] = config["pipeline-folder"]+"/scripts/Insilico-report.R"
 config["adapter"]=config["pipeline-folder"]+"/adapter.fa"
 config["barcodes-file"] = config["project-folder"]+"/barcodesID.txt"
@@ -191,7 +192,6 @@ config["singularity"]["samtools"] = "docker://fischuu/samtools:1.9-0.2"
 config["singularity"]["r-gbs"] = "docker://fischuu/r-gbs:4.2.1-0.6"
 config["singularity"]["stringtie"] = "docker://fischuu/stringtie:2.2.1-0.1"
 config["singularity"]["subread"] = "docker://fischuu/subread:2.0.1-0.1"
-config["singularity"]["mummer"] = "docker://fischuu/mummer:4.0.0-0.6"
 
 ##### Print the welcome screen #####
 print("#################################################################################")
@@ -222,7 +222,6 @@ print("##### r-gbs     : "+config["singularity"]["r-gbs"])
 print("##### samtools  : "+config["singularity"]["samtools"])
 print("##### subread   : "+config["singularity"]["subread"])
 print("##### stringtie : "+config["singularity"]["stringtie"])
-print("##### MUMmer    : "+config["singularity"]["mummer"])
 print("#####")
 print("##### Runtime-configurations")
 print("##### --------------------------------")
@@ -262,7 +261,7 @@ rule all:
         "%s/QC/CONCATENATED/multiqc_R1/" % (config["project-folder"]),
         "%s/QC/TRIMMED/multiqc_R1/" % (config["project-folder"]),
       # OUTPUT STEP 3  
-        "%s/FASTQ/TRIMMED/GSC.MR.Clusters.report.txt" % (config["project-folder"]),
+        "%s/REPORTS/DATA/MockReference_Reference_similarity.report.txt" % (config["project-folder"]),
       # OUTPUT STEP 4
         "%s/FASTQ/TRIMMED/GSC.MR.Genome.fa" % (config["project-folder"]),
       # OUTPUT STEP 5
@@ -338,8 +337,8 @@ rule mockreference:
     input:
         "%s/FASTQ/TRIMMED/GSC.MR.Genome.fa" % (config["project-folder"]),
         "%s/FASTQ/TRIMMED/GSC.MR.Clusters.fa" % (config["project-folder"]),
-        "%s/FASTQ/TRIMMED/GSC.MR.Clusters.report.txt" % (config["project-folder"])
-
+        "%s/REPORTS/DATA/MockReference_Reference_similarity.report.txt" % (config["project-folder"])
+        
 def get_readalignment_expand_files(wildcards):
     if config["genome"] == "":
         return []
